added facebook link

--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
             <div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/facebook-lead-image-04-1478254687-600x450.jpg" alt="">
+                        <a href="https://www.facebook.com/groups/elviraemassimosposi" target="_blank"><img src="assets/images/facebook-lead-image-04-1478254687-600x450.jpg" alt=""></a>
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><div><strong>Pagina Facebook</strong></div></h5>
                         
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Lascia un messaggio o carica delle foto<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-secondary display-7" target="_blank">Apri Facebook</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.facebook.com/groups/elviraemassimosposi" class="btn item-btn btn-secondary display-7" target="_blank">Apri Facebook</a></div>
                 </div>
             </div>
         </div>
@@ -141,7 +141,7 @@
             <div class="card col-12 col-lg">
                 <div class="card-wrapper">
                     <h6 class="card-title mbr-fonts-style mb-4 display-5"><strong>Il più bel regalo che possiate farci è condividere con noi questo giorno. Ma se gradite farci un pensiero, potete contribuire al nostro viaggio di nozze!</strong><br></h6>
-                    <p class="mbr-text mbr-fonts-style display-7">L'IBAN lo trovate sulla pagina facebook, oppure contattate direttamente gli sposi</p>
+                    <p class="mbr-text mbr-fonts-style display-7">L'IBAN lo trovate sulla <a href="https://www.facebook.com/groups/elviraemassimosposi" class="text-primary" target="_blank">pagina facebook</a>, oppure contattate direttamente gli sposi</p>
                     
                 </div>
             </div>
@@ -168,7 +168,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/a" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise website software - <a href="https://mobirise.site/n" style="color:#aaa;">Read more</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/r" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Web page was <a href="https://mobirise.site/g" style="color:#aaa;">made</a> with Mobirise</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
